# ElectroStack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Start-ElectroStack.bat  error .txt  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tray.html
apps/desktop/src/: main.tsx  styles.css  tray.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: api.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  services.rs  stack.rs  system.rs
docs/: API.md  ARCHITECTURE.md
installer/: README.md
scripts/: add-host.ps1  install-stack.ps1  packages.json  repair-stack.ps1  verify-stack.ps1
